--- a/styles/main.css
+++ b/styles/main.css
@@ -7,8 +7,8 @@ body {
 
 .gradient {
 	background: linear-gradient(3deg, #fffbf4 76%, rgba(245, 223, 214, 1) 89%);
-    width: 100%;
-    height: 100%;
+    	width: 100%;
+    	height: 100%;
 }
 
 .cream-back {
@@ -28,10 +28,10 @@ a {
 .txt-decor::after {
 	position: absolute;
 	content: '';
-    display: block;
-    width: 80px;
-    height: 1px;
-    border-radius: 3px;
+	display: block;
+	width: 80px;
+	height: 1px;
+	border-radius: 3px;
 }
 
 .is-flex {
@@ -40,19 +40,19 @@ a {
 
 .light-pink-lines{
 	border-left: 1px solid rgba(245, 223, 214, 1);
-    border-right: 1px solid rgba(245, 223, 214, 1);
+    	border-right: 1px solid rgba(245, 223, 214, 1);
 }
 
 .dark-pink-lines{
-    border-left: 1px solid rgb(239 206 192);
-    border-right: 1px solid rgb(239 206 192);
+	border-left: 1px solid rgb(239 206 192);
+	border-right: 1px solid rgb(239 206 192);
 }
 
 hr {
-    border: none;
-    height: 2px;
-    background-color: #333;
-    margin: 20px 0;
+	border: none;
+	height: 2px;
+	background-color: #333;
+	margin: 20px 0;
 }
 
 /*------------------------------------------------
@@ -65,7 +65,7 @@ Typography
 }
 
 .noto-sans {
-  font-family: "Noto Sans JP", sans-serif;
+	font-family: "Noto Sans JP", sans-serif;
 	font-size: 18px;
 	font-weight: 300;
 }
@@ -74,17 +74,17 @@ Typography
 Header / Global Navigation
 ------------------------------------------------*/
 .header {
-    position: sticky;
-    top: 0;
-    background-color: white;
-    height: 0;
-    width: 1300px;
-    padding: 0;
-    margin: 0 auto;
-    z-index: 1000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	position: sticky;
+	top: 0;
+	background-color: white;
+	height: 0;
+	width: 1300px;
+	padding: 0;
+	margin: 0 auto;
+	z-index: 1000;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .logo img {
@@ -115,13 +115,13 @@ Header / Global Navigation
 }
 
 .gn .txt-decor::after {
-    background: #3b3b3b;
-    left: -7px;
-    bottom: 0;
+	background: #3b3b3b;
+	left: -7px;
+	bottom: 0;
 }
 
 .gn a:hover {
-	color: #e95d68;
+	color: #4f6b2c;
 }
 
 /* Media query for smaller screens */
@@ -149,13 +149,13 @@ Introduction
 .intro h1 {
 	text-align: center;
 	border-bottom: 2px solid rgba(245,237,231,1);
-    border-left: 2px solid rgba(245,237,231,1);
-    border-right: 2px solid rgba(245,237,231,1);
-    font-size: 80px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    color: #3b3b3b;
-    padding: 135px 0 95px 0;
+	border-left: 2px solid rgba(245,237,231,1);
+	border-right: 2px solid rgba(245,237,231,1);
+	font-size: 80px;
+	font-weight: 500;
+	letter-spacing: 1px;
+	color: #3b3b3b;
+	padding: 135px 0 95px 0;
 }
 
 .container {
