--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 .gradient {
-	background: linear-gradient(3deg, #fffbf4 76%, rgba(245, 223, 214, 1) 89%);
+	background: linear-gradient(3deg, #fffbf4 76%, rgb(253 216 216) 89%);
     	width: 100%;
     	height: 100%;
 }
