--- a/styles/togetech.css
+++ b/styles/togetech.css
@@ -31,7 +31,7 @@ List styling: Role
 Page image styling
 ------------------------------------------------*/
 .banner {
-    background-image: url('../images/cat.png');
+    background-image: url('../images/groceries.png');
 }
 
 .research-mth li {
