--- a/styles/web-threats.css
+++ b/styles/web-threats.css
@@ -2,7 +2,7 @@
 Page Styling
 ------------------------------------------------*/
 .banner {
-    background-image: url('../images/cat.png');
+    background-image: url('../images/hacker.png');
 }
 
 .viz {
