--- a/styles/projects.css
+++ b/styles/projects.css
@@ -116,12 +116,11 @@ a {
 Layout & Styling
 ------------------------------------------------*/
 .banner {
-    width: 50%;
-    height: 300px;
-    background-size: cover;
-    background-position: top;
-    background-repeat: round;
-    margin: 0 auto;
+    width: 100%;
+    height: 257px;
+    background-repeat: repeat-x;
+    background-size: contain;
+    background-position: top center;
 }
 
 .thin {
@@ -132,7 +131,7 @@ Layout & Styling
 .proj-head {
     font-size: 36px;
     font-weight: 700;
-    margin: 35px 100px;
+    margin: 15px 100px 35px 100px;
 }
 
 .project-page {
