--- a/styles/sleep-model.css
+++ b/styles/sleep-model.css
@@ -2,7 +2,7 @@
 Page Styling
 ------------------------------------------------*/
 .banner {
-    background-image: url('../images/cat.png');
+    background-image: url('../images/mobile.png');
 }
 
 .green {
